<resources>
    <string name="app_name">MoviesApp</string>

    <!-- Actions Screen -->
    <string name="actions_screen_open_movies_list_view_button">Movies</string>
    <string name="actions_screen_open_series_list_view_button">Tv Shows</string>
    <string name="actions_screen_open_search_list_view_button">Search</string>

    <!-- Movies List Screen -->
    <string name="movies_list_screen_toolbar_title">TMDb</string>
    <string name="movies_list_screen_toolbar_text_view">Movies in Theatres</string>
    <string name="footer_item_button">Show More</string>
    <string name="header_item_text_view_date">This list was added in:</string>

    <!-- Tv Shows List Screen -->
    <string name="tv_shows_list_screen_toolbar_text_view">Tv Shows</string>

    <!-- Search Movies Screen -->
    <string name="search_movies_screen_toolbar_text_view">Search Movies</string>
    <string name="search_movies_screen_edit_text_hint">Search</string>
    <string name="search_movies_screen_no_results_text_view">No results to display!</string>

    <!-- Movies Details Screen -->
    <string name="movie_details_screen_language_label">Language:</string>
    <string name="movie_details_screen_genre_label">Genre(s):</string>
    <string name="movie_details_screen_release_date_label">Release date:</string>
    <string name="movie_details_screen_overview_label">Overview</string>
    <string name="movie_details_screen_share">Share</string>
    <string name="movie_details_screen_share_title">Share Movie Info</string>

    <!-- Movies Details Screen -->
    <string name="tv_show_details_screen_share_title">Share Tv Show Info</string>

</resources>
