<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/itemsBackground"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/toolbarColor"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-5dp"
                    android:text="@string/movies_list_screen_toolbar_title"
                    android:textColor="@color/toolbarTextView"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/toolbar_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_movies_screen_toolbar_text_view"
                    android:textColor="@color/toolbarTextView"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <EditText
                android:id="@+id/search_movies_screen_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text"
                android:hint="@string/search_hint"
                android:inputType="textCapSentences"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <ImageButton
                android:id="@+id/search_movies_screen_button"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/search_button"
                android:src="@drawable/ic_search" />

        </LinearLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar">

            <!-- Search Movies ListView -->
            <ListView
                android:id="@+id/search_movies_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/listViewDivider"
                android:dividerHeight=".05dp" />

        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>

    <!-- Search Progressbar -->
    <ProgressBar
        android:id="@+id/search_movies_loader"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <!-- Search Movies No Results Label -->
    <TextView
        android:id="@+id/search_movies_no_results_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_movies_screen_no_results_text_view"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>

















