<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/movie_details_app_bar"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:background="@color/itemsBackground"
        android:elevation="5dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/movie_details_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/itemsBackground"
            app:expandedTitleMarginEnd="65dp"
            app:expandedTitleMarginStart="50dp"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

            <!-- Movie Details Poster -->
            <ImageView
                android:id="@+id/movie_details_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="parallax" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/itemsBackground"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/movie_details_title_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/movies_details_loader"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <!-- Movie Details Title -->
            <TextView
                android:id="@+id/movie_details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/itemsLabelTextColor"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/movie_details_rating_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_details_title"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!-- Movie Rating Star -->
                <ImageView
                    android:id="@+id/movie_details_rating_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:src="@drawable/rate_star"
                    android:visibility="gone" />

                <!-- Movie Details Rating Label -->
                <TextView
                    android:id="@+id/movie_details_rating_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/itemsLabelTextColor"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/movie_details_genres_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movie_details_rating_container"
                android:orientation="horizontal">

                <!-- Movie Details Genres Label -->
                <TextView
                    android:id="@+id/movie_details_genres_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/movie_details_screen_genre_label"
                    android:textColor="@color/itemsLabelTextColor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <!-- Movie Details Genres Info -->
                <TextView
                    android:id="@+id/movie_details_genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="20dp"
                    android:alpha="0.7"
                    android:textColor="@color/itemsLabelTextColor" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/movie_details_release_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movie_details_genres_container"
                android:orientation="horizontal">

                <!-- Movie Details Release Date Label -->
                <TextView
                    android:id="@+id/movie_details_release_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/movie_details_screen_release_date_label"
                    android:textColor="@color/itemsLabelTextColor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <!-- Movie Details Release Date Info -->
                <TextView
                    android:id="@+id/movie_details_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="20dp"
                    android:alpha="0.7"
                    android:textColor="@color/itemsLabelTextColor" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/movie_details_language_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movie_details_release_container"
                android:orientation="horizontal">

                <!-- Movie Details Language Label -->
                <TextView
                    android:id="@+id/movie_details_language_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/movie_details_screen_language_label"
                    android:textColor="@color/itemsLabelTextColor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <!-- Movie Details Language Label Info -->
                <TextView
                    android:id="@+id/movie_details_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="20dp"
                    android:alpha="0.7"
                    android:textColor="@color/itemsLabelTextColor" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/movie_details_overview_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movie_details_language_container"
                android:orientation="vertical">

                <!-- Movie Details Overview Label -->
                <TextView
                    android:id="@+id/movie_details_overview_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/movie_details_screen_overview_label"
                    android:textColor="@color/itemsLabelTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <!-- Movie Details Overview info -->
                <TextView
                    android:id="@+id/movie_details_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:alpha="0.7"
                    android:textColor="@color/itemsLabelTextColor"
                    android:textSize="15sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/movie_details_share_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_below="@+id/movie_details_overview_container"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_share"
                android:visibility="gone" />

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>